Class.newInstance() -> Class.getDeclaredConstructor().newInstance()